structure of my page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,43 @@
-<h1> My Homepage </h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8"> 
+    <!-- the meta tag allows over millions of characters including emojis vs just 128 -->
 
-<p> my link in bio</p>
+    <title> Gehna Rai Nandwani's Links</title>
+     <style>
+    * {
+      border: thin red solid;
+    }
+  </style>
+  </head>
+
+  <body>
+    <div class = "main-container">
+      <div class = "image-row">
+        <img src = "images/nandwani_professional_headshot.jpg" alt = "Gehna Rai Nandwani Headshot">
+      </div>
+
+      <div class = "name">
+        Gehna Rai Nandwani
+      </div>
+
+      <div class = "social-icons">
+        <a href = "https://www.linkedin.com/in/gehna-rai-nandwani/" target = "_blank">
+          LinkedIn
+        </a>
+
+        <a href= "https://github.com/gehnarai" target = "_blank">
+          GitHub
+        </a>
+        
+        <a href = "https://www.instagram.com/gehnanandwani" target = "_blank">
+          Instagram
+        </a>
+      </div>
+
+      <div class = "links">
+        <div class = "item"></div>
+      </div>
+  </body>
+</html>
