--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <!-- the meta tag allows over millions of characters including emojis vs just 128 -->
 
     <title> Gehna Rai Nandwani's Links</title>
-     <style>
+    <link href = "style.css" rel = "stylesheet">
+     <!-- <style>
     * {
       border: thin red solid;
     }
-  </style>
+  </style> -->
   </head>
 
   <body>
     <div class = "main-container">
-      <div class = "image-row">
-        <img src = "images/nandwani_professional_headshot.jpg" alt = "Gehna Rai Nandwani Headshot">
+      <div class = "image">
+        <img class = "profile-pic" src = "images/nandwani_professional_headshot.jpg" alt = "Gehna Rai Nandwani Headshot">
       </div>
 
       <div class = "name">
-        Gehna Rai Nandwani
+        <strong> Gehna Rai Nandwani </strong> 
       </div>
 
       <div class = "social-icons">
@@ -37,7 +38,29 @@
       </div>
 
       <div class = "links">
-        <div class = "item"></div>
+        <div class = "item">
+          <img class = "thumbnail" src = "images/rumi.jpg" alt = "spiritual logo">
+
+          <a href= "https://www.goodreads.com/author/quotes/875661.Jalal_ad_Din_Muhammad_ar_Rumi" target = "_blank">
+            A few words I live by
+          </a>
+        </div>
+
+        <div class = "item">
+          <img class = "thumbnail" src = "images/words.jpg" alt = "words logo">
+
+          <a href= "https://contexto.me/en/" target = "_blank">
+            Context: A twisty little brain workout
+          </a>
+        </div>
+
+        <div class = "item">
+          <img class = "thumbnail" src = "images/adventure.jpg" alt = "Gehna skydiving">
+
+          <a href= "https://www.thebucketlistfamily.com/destinations" target = "_blank">
+            The world is your oyester (mushroom -- I'm vegetarian!)
+          </a>
+        </div>
       </div>
   </body>
 </html>
